All notebooks now working again with PRFMDataset class update.

--- a/Check_asymmetric-forces-2D.ipynb
+++ b/Check_asymmetric-forces-2D.ipynb
@@ -22,6 +22,10 @@
     "from PRFMData import PRFMDataset\n",
     "import astro_helper as ah\n",
     "\n",
+    "import configparser\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('config_pressures-weights-SFRs.ini')\n",
+    "\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,12 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c20b0e0f-0b11-4dff-8a89-582936c3b647",
    "metadata": {},
    "outputs": [],
    "source": [
     "ETG_vlM = PRFMDataset(\n",
+    "    params = config[\"ETG-vlM\"],\n",
     "    galaxy_type=\"ETG-vlM\",\n",
     "    total_height=0.3, # kpc\n",
     "    Rmax=2., # kpc\n",
@@ -59,12 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1e91dace-e851-4de4-989b-21fa1c0bea5f",
    "metadata": {},
    "outputs": [],
    "source": [
     "ETG_lowM = PRFMDataset(\n",
+    "    params = config[\"ETG-lowM\"],\n",
     "    galaxy_type=\"ETG-lowM\",\n",
     "    total_height=0.3, # kpc\n",
     "    Rmax=2., # kpc\n",
@@ -79,12 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "49d0b53b-83ca-458a-91e1-2fa3017b94f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "ETG_medM = PRFMDataset(\n",
+    "    params = config[\"ETG-medM\"],\n",
     "    galaxy_type=\"ETG-medM\",\n",
     "    total_height=0.3, # kpc\n",
     "    Rmax=2., # kpc\n",
@@ -105,6 +112,7 @@
    "outputs": [],
    "source": [
     "ETG_hiM = PRFMDataset(\n",
+    "    params = config[\"ETG-hiM\"],\n",
     "    galaxy_type=\"ETG-hiM\",\n",
     "    total_height=0.3, # kpc\n",
     "    Rmax=2., # kpc\n",
@@ -125,6 +133,7 @@
    "outputs": [],
    "source": [
     "NGC300 = PRFMDataset(\n",
+    "    params = config[\"NGC300\"],\n",
     "    galaxy_type=\"NGC300\",\n",
     "    total_height=1.5, # kpc\n",
     "    Rmax=6., # kpc\n",
@@ -145,6 +154,7 @@
    "outputs": [],
    "source": [
     "MW = PRFMDataset(\n",
+    "    params = config[\"MW\"],\n",
     "    galaxy_type=\"MW\",\n",
     "    total_height=1.5, # kpc\n",
     "    Rmax=6., # kpc\n",
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "3d6ac086-1e63-48f4-99e1-48d6e39055fc",
    "metadata": {},
    "outputs": [
@@ -186,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "4d8b38d9-6f8d-473d-ac98-822e015ee601",
    "metadata": {},
    "outputs": [
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "e4a7548a-eaf2-4ed2-bddb-8c18718f7247",
    "metadata": {},
    "outputs": [
@@ -244,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "dba9bdea-dd8f-4e0a-a1dd-127d71d73b6c",
    "metadata": {},
    "outputs": [
@@ -263,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "5f7d27c0-6027-4f2d-abc1-0528f4ca21e5",
    "metadata": {},
    "outputs": [
@@ -292,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "9425c129-e349-4b0b-89e1-134360763a8f",
    "metadata": {},
    "outputs": [
@@ -311,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "e294c861-a4c6-4bd5-be20-a2aa51cc7104",
    "metadata": {},
    "outputs": [
@@ -340,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "a91e7ee9-0806-493e-bdfc-ab0195f8b198",
    "metadata": {},
    "outputs": [
@@ -359,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "d685a8e3-c036-47d9-812e-0e4f12619341",
    "metadata": {},
    "outputs": [
@@ -388,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "f970ffd8-8b84-4858-8db2-a602d488ae5b",
    "metadata": {},
    "outputs": [
@@ -407,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "19a34ff8-768d-4294-b6e0-bce436288d5a",
    "metadata": {},
    "outputs": [
@@ -436,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "61268215-d045-4bb2-97e6-362511955ee1",
    "metadata": {},
    "outputs": [
@@ -455,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "596cdb18-5445-43aa-8504-300bb06e1228",
    "metadata": {},
    "outputs": [
@@ -484,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "902c5108-2bb4-4d13-bd43-217db0861019",
    "metadata": {},
    "outputs": [
@@ -503,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "88e369ad-6ad1-44d3-99b9-99bcb8b3734e",
    "metadata": {},
    "outputs": [
