--- a/Pressures-weights-SFRs_fig.ipynb
+++ b/Pressures-weights-SFRs_fig.ipynb
@@ -453,27 +453,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 1, 1, 2, 3, 3]\n",
+      "[0, 0, 1, 1, 1, 1, 2, 3, 3]\n",
+      "[0, 0, 1, 1, 1, 1, 2, 3, 3]\n",
+      "[0, 0, 1, 1, 1, 1, 2, 3, 3]\n",
+      "[0, 0, 1, 1, 1, 2, 3, 3, 1]\n",
+      "[0, 0, 1, 1, 2, 3, 3, 1, 1]\n",
+      "[0, 0, 1, 1, 2, 3, 3, 1, 1]\n",
+      "[0, 0, 1, 1, 2, 3, 3, 1, 1]\n",
+      "[0, 0, 1, 1, 2, 3, 3, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [0,0,1,1,1,1,2,3,3]\n",
+    "last_switch_idx = 0\n",
+    "discarded = 0\n",
+    "i = 0\n",
+    "while(i+discarded < len(nums)):\n",
+    "    if(nums[i]>nums[i-1]):\n",
+    "        last_switch_idx = i\n",
+    "        i+=1\n",
+    "    else:\n",
+    "        if(i-last_switch_idx>1):\n",
+    "            for j in range(i, len(nums)-1):\n",
+    "                nums[j], nums[j + 1] = nums[j + 1], nums[j]\n",
+    "            discarded+=1\n",
+    "        else:\n",
+    "            i+=1\n",
+    "    print(nums)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 1, 2, 3]\n",
+      "[0, 0, 1, 1, 1, 2, 3, 1, 3]\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nums[:i])\n",
+    "print(nums)\n",
+    "print(i)"
+   ]
   },
   {
    "cell_type": "code",
