Consolidated the different Comp scripts into one and shifted differences to config file

--- a/SigmaSFR_vs_Pressure-and-Weight.ipynb
+++ b/SigmaSFR_vs_Pressure-and-Weight.ipynb
@@ -483,22 +483,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_151538/3423993145.py:32: RuntimeWarning: divide by zero encountered in log10\n",
+      "/tmp/ipykernel_151538/3609305340.py:32: RuntimeWarning: divide by zero encountered in log10\n",
       "  density_contours.density_contour(np.log10(J23['P-DE-S20']), np.log10(J23['Sigma-SFR-HaW4recal']),\n",
-      "/tmp/ipykernel_151538/3423993145.py:51: RuntimeWarning: divide by zero encountered in log10\n",
+      "/tmp/ipykernel_151538/3609305340.py:51: RuntimeWarning: divide by zero encountered in log10\n",
       "  ax0.scatter(np.log10(meddata_PSFRs[i]['Ptot']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-      "/tmp/ipykernel_151538/3423993145.py:52: RuntimeWarning: divide by zero encountered in log10\n",
+      "/tmp/ipykernel_151538/3609305340.py:52: RuntimeWarning: divide by zero encountered in log10\n",
       "  ax0.scatter(np.log10(meddata_PSFRs[i]['Ptot']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
-      "/tmp/ipykernel_151538/3423993145.py:65: RuntimeWarning: divide by zero encountered in log10\n",
+      "/tmp/ipykernel_151538/3609305340.py:65: RuntimeWarning: divide by zero encountered in log10\n",
       "  ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-      "/tmp/ipykernel_151538/3423993145.py:66: RuntimeWarning: divide by zero encountered in log10\n",
+      "/tmp/ipykernel_151538/3609305340.py:66: RuntimeWarning: divide by zero encountered in log10\n",
       "  ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n"
      ]
     },
@@ -659,11 +659,11 @@
     "ax1.add_artist(legend1)\n",
     "#ax1.add_artist(legend2)\n",
     "\n",
-    "# plt.savefig(\n",
-    "#     '/n/holystore01/LABS/itc_lab/Users/sjeffreson/ETGs/figs/obs-comparison-pressures.pdf',\n",
-    "#     bbox_inches='tight',\n",
-    "#     format='pdf'\n",
-    "# )\n",
+    "plt.savefig(\n",
+    "    '/n/holystore01/LABS/itc_lab/Users/sjeffreson/ETGs/figs/obs-comparison-pressures.pdf',\n",
+    "    bbox_inches='tight',\n",
+    "    format='pdf'\n",
+    ")\n",
     "\n",
     "plt.show()"
    ]
