--- a/ETGs_eEoS.ipynb
+++ b/ETGs_eEoS.ipynb
@@ -192,18 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_588512/4245205417.py:38: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
+      "/tmp/ipykernel_588512/510379195.py:38: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
       "  ax0.dist = 12\n",
-      "/tmp/ipykernel_588512/4245205417.py:39: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
+      "/tmp/ipykernel_588512/510379195.py:39: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
       "  ax1.dist = 12\n",
-      "/tmp/ipykernel_588512/4245205417.py:40: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
+      "/tmp/ipykernel_588512/510379195.py:40: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
       "  ax2.dist = 12\n",
       "/tmp/ipykernel_588512/2824081494.py:7: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
@@ -361,7 +361,7 @@
     "    ncol=1, frameon=False, handlelength=0.9, columnspacing=0.75, fontsize=18\n",
     ")\n",
     "\n",
-    "#plt.savefig('/n/holystore01/LABS/itc_lab/Users/sjeffreson/ETGs/figs/eEoS_3D.pdf', bbox_inches='tight', format='pdf')\n",
+    "plt.savefig('/n/holystore01/LABS/itc_lab/Users/sjeffreson/ETGs/figs/eEoS_3D.pdf', bbox_inches='tight', format='pdf')\n",
     "plt.show()"
    ]
   },
