got everything working after directory restructure

--- a/notebooks/Check_PRFMData.ipynb
+++ b/notebooks/Check_PRFMData.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "fd7a1d92-92d6-4dcf-9a54-f910b3101199",
    "metadata": {},
    "outputs": [],
@@ -18,13 +18,14 @@
     "import numpy as np\n",
     "import h5py\n",
     "import glob, os, re, sys\n",
+    "sys.path.append('../')\n",
     "\n",
     "from PRFMData import PRFMDataset\n",
     "import astro_helper as ah\n",
     "\n",
     "import configparser\n",
     "config = configparser.ConfigParser()\n",
-    "config.read('config_weights.ini')\n",
+    "config.read('../config/config_weights.ini')\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c20b0e0f-0b11-4dff-8a89-582936c3b647",
    "metadata": {},
    "outputs": [],
