--- a/notebooks/Check_asymmetric-forces-2D.ipynb
+++ b/notebooks/Check_asymmetric-forces-2D.ipynb
@@ -18,13 +18,14 @@
     "import numpy as np\n",
     "import h5py\n",
     "import glob, os, re, sys\n",
+    "sys.path.append('../')\n",
     "\n",
     "from PRFMData import PRFMDataset\n",
     "import astro_helper as ah\n",
     "\n",
     "import configparser\n",
     "config = configparser.ConfigParser()\n",
-    "config.read('config_pressures-weights-SFRs.ini')\n",
+    "config.read('../config/config_pressures-weights-SFRs.ini')\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
