--- a/notebooks/SigmaSFR_vs_Pressure-and-Weight.ipynb
+++ b/notebooks/SigmaSFR_vs_Pressure-and-Weight.ipynb
@@ -13,6 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
+    "from pathlib import Path\n",
+    "import glob, os, re, sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "import configparser\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('../config/config_pressures-SFRs.ini')\n",
+    "\n",
     "import numpy as np\n",
     "from PRFMData import PRFMDataset\n",
     "import astro_helper as ah\n",
@@ -21,13 +30,6 @@
     "from astropy.io import ascii as asciitable\n",
     "from astropy.table import Table\n",
     "import density_contours\n",
-    "\n",
-    "import pickle\n",
-    "from pathlib import Path\n",
-    "import glob, os, re, sys\n",
-    "import configparser\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read('config_pressures-SFRs.ini')\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
