--- a/notebooks/ETGs_eEoS.ipynb
+++ b/notebooks/ETGs_eEoS.ipynb
@@ -18,9 +18,11 @@
     "import pickle\n",
     "from pathlib import Path\n",
     "import glob, os, re, sys\n",
+    "sys.path.append('../')\n",
+    "\n",
     "import configparser\n",
     "config = configparser.ConfigParser()\n",
-    "config.read('config_pressures-SFRs.ini')\n",
+    "config.read('../config/config_pressures-SFRs.ini')\n",
     "\n",
     "from PRFMData import PRFMDataset\n",
     "import astro_helper as ah\n",
