--- a/notebooks/Pressures-weights-SFRs_fig.ipynb
+++ b/notebooks/Pressures-weights-SFRs_fig.ipynb
@@ -13,18 +13,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
+    "from pathlib import Path\n",
+    "import glob, os, re, sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "import configparser\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('../config/config_pressures-SFRs.ini')\n",
+    "\n",
     "import numpy as np\n",
     "from scipy import stats\n",
     "\n",
     "from PRFMData import PRFMDataset\n",
     "import astro_helper as ah\n",
-    "\n",
-    "import pickle\n",
-    "from pathlib import Path\n",
-    "import glob, os, re, sys\n",
-    "import configparser\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read('config_pressures-SFRs.ini')\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
