--- a/notebooks/SigmaSFR_vs_Density.ipynb
+++ b/notebooks/SigmaSFR_vs_Density.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
+    "from pathlib import Path\n",
+    "import glob, os, re, sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "import configparser\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('../config/config_pressures-SFRs.ini')\n",
+    "\n",
     "import numpy as np\n",
     "from scipy.stats import gaussian_kde\n",
     "from scipy import interpolate\n",
@@ -15,13 +24,6 @@
     "from PRFMData import PRFMDataset\n",
     "import astro_helper as ah\n",
     "import density_contours\n",
-    "\n",
-    "import pickle\n",
-    "from pathlib import Path\n",
-    "import glob, os, re, sys\n",
-    "import configparser\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read('config_pressures-SFRs.ini')\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
